--- a/project_3/Dockerfile
+++ b/project_3/Dockerfile
@@ -1,4 +1,10 @@
 FROM jupyter/datascience-notebook
 MAINTAINER alvin@unc.edu
 
-RUN Rscript -e "install.packages(c('tidyverse'), dependencies=TRUE, repos='http://cran.rstudio.com/')"
+RUN R -e "install.packages('stringr',dependencies=TRUE, repos='http://cran.rstudio.com/')"
+RUN R -e "install.packages('lubridate',dependencies=TRUE, repos='http://cran.rstudio.com/')"
+RUN R -e "install.packages('readxl',dependencies=TRUE, repos='http://cran.rstudio.com/')"
+RUN R -e "install.packages('RColorBrewer',dependencies=TRUE, repos='http://cran.rstudio.com/')"
+RUN R -e "install.packages('treemapify',dependencies=TRUE, repos='http://cran.rstudio.com/')"
+RUN R -e "install.packages('patchwork',dependencies=TRUE, repos='http://cran.rstudio.com/')"
+RUN R -e "install.packages('rmarkdown',dependencies=TRUE, repos='http://cran.rstudio.com/')"
