--- a/project_3/Dockerfile
+++ b/project_3/Dockerfile
@@ -1,6 +1,7 @@
 FROM jupyter/datascience-notebook
 MAINTAINER alvin@unc.edu
 
+RUN R -e "install.packages('dplyr',dependencies=TRUE, repos='http://cran.rstudio.com/')"
 RUN R -e "install.packages('stringr',dependencies=TRUE, repos='http://cran.rstudio.com/')"
 RUN R -e "install.packages('lubridate',dependencies=TRUE, repos='http://cran.rstudio.com/')"
 RUN R -e "install.packages('readxl',dependencies=TRUE, repos='http://cran.rstudio.com/')"
